# imgserv

./: .gitignore  README.md  build.sh  imgserv.spec  photoframe.py  pyproject.toml
src/imgserv/: __init__.py  __main__.py  server.py
