[project]
name = "imgserv"
version = "0.1.0"
description = ""
authors = [
    {name = "Karthik",email = "karthik@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0.0",
    "certifi>=2024.0.0",
]

[tool.poetry]
packages = [{include = "imgserv", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
